@@ -18,10 +18,6 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.context.annotation.Bean;
-import org.springframework.context.annotation.Configuration;
-import org.springframework.web.servlet.config.annotation.CorsRegistry;
-import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 import java.util.Arrays;
 import java.util.List;
@@ -35,36 +31,18 @@ public class SecurityConfig {
     private final UserDetailsService userDetailsService;
     private final JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
-    private final CustomUserDetailsService customUserDetailsService;
 
-
-    @Configuration
-    public class CorsConfig {
-        @Bean
-        public WebMvcConfigurer corsConfigurer() {
-            return new WebMvcConfigurer() {
-                @Override
-                public void addCorsMappings(CorsRegistry registry) {
-                    registry.addMapping("/**")
-                            .allowedOrigins("http://localhost:4200")
-                            .allowedMethods("*")
-                            .allowedHeaders("*")
-                            .allowCredentials(true);
-                }
-            };
-        }
-    }
-    /**
-     * Encoder de contraseñas con BCrypt
-     */
+    // ===========================
+    // Password Encoder
+    // ===========================
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
-    /**
-     * Proveedor de autenticación
-     */
+    // ===========================
+    // Authentication Provider
+    // ===========================
     @Bean
     public DaoAuthenticationProvider authenticationProvider() {
         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
@@ -73,44 +51,39 @@ public class SecurityConfig {
         return authProvider;
     }
 
-    /**
-     * Authentication Manager
-     */
+    // ===========================
+    // Authentication Manager
+    // ===========================
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
         return authConfig.getAuthenticationManager();
     }
 
-    /**
-     * Configuración de la cadena de filtros de seguridad
-     */
+    // ===========================
+    // Security Filter Chain
+    // ===========================
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                // Deshabilitar CSRF (no necesario para API REST con JWT)
                 .csrf(csrf -> csrf.disable())
-
-                // Configurar CORS
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-
-                // Manejo de excepciones de autenticación
                 .exceptionHandling(exception ->
                         exception.authenticationEntryPoint(jwtAuthenticationEntryPoint)
                 )
-
-                // Política de sesión STATELESS (sin sesiones)
                 .sessionManagement(session ->
                         session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
                 )
-
-                // Reglas de autorización
                 .authorizeHttpRequests(auth -> auth
-                        // ==================== RUTAS PÚBLICAS ====================
+                        // Rutas públicas
                         .requestMatchers("/api/auth/**").permitAll()
                         .requestMatchers("/api/public/**").permitAll()
                         .requestMatchers("/swagger-ui/**", "/v3/api-docs/**").permitAll()
+                        .requestMatchers("/swagger-resources/**").permitAll()
+                        .requestMatchers("/api/chatbot/consulta").permitAll()
+                        // Email - requiere autenticación
+                        .requestMatchers("/api/email/**").authenticated()
 
-                        // ==================== RUTAS DE ESTUDIANTES ====================
+                        // Estudiantes
                         .requestMatchers("/api/estudiantes/**").hasAnyAuthority("student", "admin")
                         .requestMatchers("/api/juegos/**").hasAnyAuthority("student", "teacher", "admin")
                         .requestMatchers("/api/progreso/**").hasAnyAuthority("student", "admin")
@@ -120,69 +93,69 @@ public class SecurityConfig {
                         .requestMatchers("/api/notificaciones/**").authenticated()
                         .requestMatchers("/api/estudiantes/puntos").hasAuthority("student")
 
-                        // ==================== RUTAS DE PROFESORES ====================
+                        // Profesores
                         .requestMatchers("/api/profesores/**").hasAnyAuthority("teacher", "admin")
                         .requestMatchers("/api/reportes/**").hasAnyAuthority("teacher", "admin")
                         .requestMatchers("/api/analisis/**").hasAnyAuthority("teacher", "admin")
 
-                        // ==================== RUTAS DE ADMIN ====================
+                        // Admin
                         .requestMatchers("/api/admin/**").hasAuthority("admin")
                         .requestMatchers("/api/usuarios/**").hasAuthority("admin")
 
-                        // ==================== CUALQUIER OTRA RUTA ====================
+
+
+                        // Cualquier otra ruta
                         .anyRequest().authenticated()
                 );
 
-        // Agregar proveedor de autenticación
         http.authenticationProvider(authenticationProvider());
-
-        // Agregar filtro JWT antes del filtro de autenticación de usuario/contraseña
         http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-    /**
-     * Configuración de CORS para permitir requests desde Angular
-     */
+    // ===========================
+    // CORS Configuration - ✅ ÚNICA Y CORRECTA
+    // ===========================
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // Orígenes permitidos (Angular frontend)
-        configuration.setAllowedOrigins(List.of(
-                "http://localhost:4200",      // Angular local
-                "http://localhost:4201",      // Angular alternativo
-                "https://mikhuy-frontend.com" // Producción (cambiar según necesidad)
+        // ✅ Orígenes permitidos (NO usar "*" con allowCredentials)
+        configuration.setAllowedOrigins(Arrays.asList(
+                "http://localhost:4200",
+                "http://localhost:4201",
+                "http://127.0.0.1:4200",
+                "https://mikhuy-frontend.com"
         ));
 
-        // Métodos HTTP permitidos
+        // ✅ Métodos HTTP permitidos
         configuration.setAllowedMethods(Arrays.asList(
-                "GET",
-                "POST",
-                "PUT",
-                "DELETE",
-                "OPTIONS",
-                "PATCH"
+                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
         ));
 
-        // Headers permitidos
-        configuration.setAllowedHeaders(List.of("*"));
+        // ✅ Headers permitidos
+        configuration.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "Accept",
+                "X-Requested-With",
+                "X-Total-Count"
+        ));
 
-        // Permitir credenciales (cookies, headers de autorización)
-        configuration.setAllowCredentials(true);
-
-        // Tiempo máximo de cache de la configuración CORS (1 hora)
-        configuration.setMaxAge(3600L);
-
-        // Headers expuestos al cliente
+        // ✅ Headers expuestos (visibles para el frontend)
         configuration.setExposedHeaders(Arrays.asList(
                 "Authorization",
                 "Content-Type",
                 "X-Total-Count"
         ));
 
-        // Aplicar configuración a todas las rutas
+        // ✅ Permitir credenciales (cookies, headers de auth)
+        configuration.setAllowCredentials(true);
+
+        // ✅ Cache de configuración CORS
+        configuration.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
 
